--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,10 +23,16 @@ uuid = { version = "1.0", features = ["v4", "serde"] }
 hex = "0.4"
 sha3 = "0.10"
 alloy = { version = "0.5", features = ["signers", "signer-local", "rpc-types", "json-rpc"] }
+bip39 = "2.0"
+tiny-hderive = "0.3"
+secp256k1 = "0.29"
+tiny-keccak = { version = "2.0", features = ["keccak"] }
 futures = "0.3"
 tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
 tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
 tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
+rand = "0.8"
 
 [dev-dependencies]
 tokio-test = "0.4"
