--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
           components: clippy
       - uses: Swatinem/rust-cache@v2
       - name: Run clippy
-        run: cargo clippy --all-targets --all-features -- -D warnings
+        run: cargo clippy --all-targets --all-features -- -W clippy::all
 
   test:
     name: Test
@@ -65,3 +65,15 @@ jobs:
         run: cargo build --verbose --all-features
       - name: Build examples
         run: cargo build --examples --verbose
+
+  check-publish:
+    name: Check Publishing
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@stable
+      - uses: Swatinem/rust-cache@v2
+      - name: Check package
+        run: cargo package --list
+      - name: Check publish (dry run)
+        run: cargo publish --dry-run
