docs: update documentation for published crate
- Add crates.io and docs.rs links throughout documentation
- Update installation instructions to use published version
- Fix CI workflow to avoid publish dry-run issues
- Remove debug println from random mnemonic generation
- Add badges to docs README

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,5 +75,5 @@ jobs:
       - uses: Swatinem/rust-cache@v2
       - name: Check package
         run: cargo package --list
-      - name: Check publish (dry run)
-        run: cargo publish --dry-run
+      - name: Check package build
+        run: cargo package --no-verify
