feat(signer): implement FFI signer using native Go binaries
- Add FFI wrapper for Lighter's native Go signer binaries
- Download and include precompiled signer binaries (amd64/arm64)
- Implement hybrid signing approach: Go binary generates message, Ethereum signs
- Add comprehensive FFI methods for order/cancel/transfer/withdraw operations
- Create example demonstrating FFI signer usage
- Fix clippy warnings and improve code quality
- Add libloading dependency for dynamic library loading

This implementation provides compatibility with Lighter's custom
Goldilocks/Schnorr cryptographic scheme while maintaining Ethereum
key security.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,7 @@ tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
 rand = "0.8"
+libloading = "0.8"
 
 [dev-dependencies]
 tokio-test = "0.4"
