--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,7 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
 rand = "0.8"
 libloading = "0.8"
+libc = "0.2"
 
 [dev-dependencies]
 tokio-test = "0.4"
