--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
 rand = "0.8"
 libloading = "0.8"
 libc = "0.2"
+rust_decimal = { version = "1.35", features = ["serde"] }
 
 [dev-dependencies]
 tokio-test = "0.4"
